[package]
name = "actix-auth-jwt"
version = "0.1.0"
authors = ["Jon Cinque <jon.cinque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0"
async-trait = "0.1"
bson = "0.14"
dotenv = "0.15"
dotenv_codegen = "0.15"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
jsonwebtoken = "7.1"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
mongodb = "0.9"
rand = "0.7"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"

[dev-dependencies]
regex = "1"
