[package]
name = "actix-auth-jwt"
version = "0.1.0"
authors = ["Jon Cinque <jon.cinque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2"
actix-rt = "2.0"
actix-service = "1.0"
actix-web = "3.3"
actix-web-httpauth = "0.5"
async-trait = "0.1"
bson = "2"
dotenv = "0.15"
dotenv_codegen = "0.15"
env_logger = "0.8"
failure = "0.1"
futures = "0.3"
jsonwebtoken = "7.2"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
mongodb = "2"
rand = "0.8"
regex = "1.4"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.12"
validator_derive = "0.12"
