[package]
name = "actix-auth-jwt"
version = "0.1.0"
authors = ["Jon Cinque <jon.cinque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3"
actix-rt = "2"
actix-service = "2"
actix-web = "4"
actix-web-httpauth = "0.8"
async-trait = "0.1"
bson = "2"
dotenv = "0.15"
dotenv_codegen = "0.15"
env_logger = "0.10"
failure = "0.1"
futures = "0.3"
jsonwebtoken = "8"
lettre = { version = "0.10", features = ["builder"] }
log = "0.4"
mongodb = "2"
rand = "0.8"
regex = "1"
rust-argon2 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
